--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div id="screen" style="width:70%">
-        <h1 class="mb-5">Find a movie</h1>
+        <h1 class="mb-3">Find a movie</h1>
         <div class="container">
             <div class="row">
                 <button class="btn1 col-4 ">Search by name</button>
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <form action="workout.php" method="post">
+        <form action="movie.php" method="post">
             <div class="container">
                 <div class="row">
 
